--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,140 +6,170 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/buttonmultiplicar"
-        android:layout_width="58dp"
-        android:layout_height="47dp"
-        android:text="*"
-        tools:layout_editor_absoluteX="337dp"
-        tools:layout_editor_absoluteY="281dp" />
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="#212121"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/buttonsumar"
-        android:layout_width="58dp"
-        android:layout_height="47dp"
-        android:text="+"
-        tools:layout_editor_absoluteX="337dp"
-        tools:layout_editor_absoluteY="360dp" />
+        <TextView
+            android:id="@+id/Etiqueta"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/gridLayout"
+            android:layout_marginBottom="14dp"
+            android:height="100dp"
+            android:textAlignment="textEnd"
+            android:textColor="#F5F5F5"
+            android:textSize="35dp"
+            android:layout_centerHorizontal="true" />
+        <GridLayout
+            android:id="@+id/gridLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center"
+            android:columnCount="4"
+            android:orientation="horizontal"
+            android:padding="0dp"
+            android:rowCount="6">
+            <Button
+                android:id="@+id/Clean"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="C"
+                android:textColor="#FF5722" />
 
-    <Button
-        android:id="@+id/buttonmenos"
-        android:layout_width="58dp"
-        android:layout_height="47dp"
-        android:text="-"
-        tools:layout_editor_absoluteX="337dp"
-        tools:layout_editor_absoluteY="440dp" />
+            <Button
+                android:id="@+id/Divide"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="/"
+                android:textColor="#FF5722" />
 
-    <Button
-        android:id="@+id/buttondividir"
-        android:layout_width="58dp"
-        android:layout_height="47dp"
-        android:text="/"
-        tools:layout_editor_absoluteX="337dp"
-        tools:layout_editor_absoluteY="194dp" />
+            <Button
+                android:id="@+id/Multiplica"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="X"
+                android:textColor="#FF5722" />
 
-    <Button
-        android:id="@+id/buttonborrar"
-        android:layout_width="58dp"
-        android:layout_height="47dp"
-        android:text="C"
-        tools:layout_editor_absoluteX="337dp"
-        tools:layout_editor_absoluteY="108dp" />
+            <Button
+                android:id="@+id/Borrar"
 
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="9"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="194dp" />
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="Borrar"
+                android:textColor="#FF5722" />
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="8"
-        tools:layout_editor_absoluteX="116dp"
-        tools:layout_editor_absoluteY="194dp" />
+            <Button
+                android:id="@+id/Siete"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="7"
+                android:textColor="#FAFAFA" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="7"
-        tools:layout_editor_absoluteX="13dp"
-        tools:layout_editor_absoluteY="194dp" />
+            <Button
+                android:id="@+id/Ocho"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="8"
+                android:textColor="#FAFAFA" />
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4"
-        tools:layout_editor_absoluteX="13dp"
-        tools:layout_editor_absoluteY="280dp" />
+            <Button
+                android:id="@+id/Nueve"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="9"
+                android:textColor="#FAFAFA" />
 
-    <Button
-        android:id="@+id/button0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0"
-        tools:layout_editor_absoluteX="13dp"
-        tools:layout_editor_absoluteY="440dp" />
+            <Button
+                android:id="@+id/Resta"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="-"
+                android:textColor="#FF5722" />
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="6"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="280dp" />
+            <Button
+                android:id="@+id/Cuatro"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="4"
+                android:textColor="#FAFAFA" />
 
-    <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="359dp" />
+            <Button
+                android:id="@+id/Cinco"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="5"
+                android:textColor="#FAFAFA" />
 
-    <Button
-        android:id="@+id/buttonigual"
-        android:layout_width="190dp"
-        android:layout_height="49dp"
-        android:text="="
-        tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="439dp" />
+            <Button
+                android:id="@+id/Seis"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="6"
+                android:textColor="#FAFAFA" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        tools:layout_editor_absoluteX="13dp"
-        tools:layout_editor_absoluteY="359dp" />
+            <Button
+                android:id="@+id/Suma"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="+"
+                android:textColor="#FF5722" />
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="5"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="280dp" />
+            <Button
+                android:id="@+id/Uno"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="1"
+                android:textColor="#FAFAFA" />
 
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3"
-        tools:layout_editor_absoluteX="222dp"
-        tools:layout_editor_absoluteY="359dp" />
+            <Button
+                android:id="@+id/Dos"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="2"
+                android:textColor="#FAFAFA" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="296dp"
-        android:layout_height="49dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="13dp"
-        tools:layout_editor_absoluteY="108dp" />
+            <Button
+                android:id="@+id/Tres"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="3"
+                android:textColor="#FAFAFA" />
 
+            <Button
+                android:id="@+id/Igual"
+                android:layout_gravity="fill"
+                android:layout_margin="2dp"
+                android:layout_rowSpan="2"
+                android:background="#424242"
+                android:text="="
+                android:textColor="#FF5722" />
+
+            <Button
+                android:id="@+id/Cero"
+                android:layout_columnSpan="2"
+                android:layout_gravity="fill"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="0"
+                android:textColor="#FAFAFA" />
+
+            <Button
+                android:id="@+id/Punto"
+                android:layout_margin="2dp"
+                android:background="#424242"
+                android:text="."
+                android:textColor="#FAFAFA" />
+
+        </GridLayout>
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
