--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
@@ -20,12 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/gridLayout"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="14dp"
             android:height="100dp"
             android:textAlignment="textEnd"
             android:textColor="#F5F5F5"
-            android:textSize="35dp"
-            android:layout_centerHorizontal="true" />
+            android:textSize="35dp" />
         <GridLayout
             android:id="@+id/gridLayout"
             android:layout_width="wrap_content"
@@ -37,22 +35,23 @@
             android:orientation="horizontal"
             android:padding="0dp"
             android:rowCount="6">
+
             <Button
-                android:id="@+id/Clean"
+                android:id="@+id/clean"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="C"
                 android:textColor="#FF5722" />
 
             <Button
-                android:id="@+id/Divide"
+                android:id="@+id/divide"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="/"
                 android:textColor="#FF5722" />
 
             <Button
-                android:id="@+id/Multiplica"
+                android:id="@+id/multiplication"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="X"
@@ -67,84 +66,84 @@
                 android:textColor="#FF5722" />
 
             <Button
-                android:id="@+id/Siete"
+                android:id="@+id/seven"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="7"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Ocho"
+                android:id="@+id/eight"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="8"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Nueve"
+                android:id="@+id/nine"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="9"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Resta"
+                android:id="@+id/minus"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="-"
                 android:textColor="#FF5722" />
 
             <Button
-                android:id="@+id/Cuatro"
+                android:id="@+id/four"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="4"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Cinco"
+                android:id="@+id/five"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="5"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Seis"
+                android:id="@+id/six"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="6"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Suma"
+                android:id="@+id/plus"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="+"
                 android:textColor="#FF5722" />
 
             <Button
-                android:id="@+id/Uno"
+                android:id="@+id/one"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="1"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Dos"
+                android:id="@+id/two"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="2"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Tres"
+                android:id="@+id/three"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="3"
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Igual"
+                android:id="@+id/equal"
                 android:layout_gravity="fill"
                 android:layout_margin="2dp"
                 android:layout_rowSpan="2"
@@ -153,7 +152,7 @@
                 android:textColor="#FF5722" />
 
             <Button
-                android:id="@+id/Cero"
+                android:id="@+id/zero"
                 android:layout_columnSpan="2"
                 android:layout_gravity="fill"
                 android:layout_margin="2dp"
@@ -162,7 +161,7 @@
                 android:textColor="#FAFAFA" />
 
             <Button
-                android:id="@+id/Punto"
+                android:id="@+id/dot"
                 android:layout_margin="2dp"
                 android:background="#424242"
                 android:text="."
