--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="14dp"
             android:height="100dp"
+            android:text="0"
             android:textAlignment="textEnd"
             android:textColor="#F5F5F5"
             android:textSize="35dp" />
